docs: typo, link to vignette in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,10 @@ A new R6 and much more modular implementation for single- and multicriteria Baye
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
+## Get Started
+
+An overview and gentle introduction is given in [this vignette](https://mlr3mbo.mlr-org.com/articles/mlr3mbo.html).
+
 ## Design
 
 `mlr3mbo` is built modular relying on the following [R6](https://cran.r-project.org/package=R6) classes:
@@ -37,7 +41,7 @@ See `?mbo_defaults` for more details.
 
 ## Simple Optimization Example
 
-Minimize `y = x^2` via sequential singlecriteria BO using a GP as surrogate and EI optimized via random search as aquisition function:
+Minimize `y = x^2` via sequential singlecriteria BO using a GP as surrogate and EI optimized via random search as acquisition function:
 
 ```{r, message = FALSE}
 library(bbotk)
@@ -58,13 +62,9 @@ instance = OptimInstanceSingleCrit$new(
   terminator = terminator
 )
 
-design = generate_design_lhs(obfun$domain, 4)$data
-instance$eval_batch(design)
-
-surrogate = SurrogateLearner$new(lrn("regr.km", control = list(trace = FALSE)))
-acqfun = AcqFunctionEI$new()
-acqopt = AcqOptimizer$new(
-  opt("random_search", batch_size = 100),
+surrogate = srlrn(lrn("regr.km", control = list(trace = FALSE)))
+acqfun = acqf("ei")
+acqopt = acqo(opt("random_search", batch_size = 100),
   terminator = trm("evals", n_evals = 100)
 )
 
@@ -87,12 +87,12 @@ set.seed(1)
 
 fun = function(xs) list(y1 = xs$x ^ 2)
 
-surrogate = SurrogateLearner$new(lrn("regr.km", control = list(trace = FALSE)))
-acqfun = AcqFunctionEI$new()
-acqopt = AcqOptimizer$new(
-  opt("random_search", batch_size = 100),
+surrogate = srlrn(lrn("regr.km", control = list(trace = FALSE)))
+acqfun = acqf("ei")
+acqopt = acqo(opt("random_search", batch_size = 100),
   terminator = trm("evals", n_evals = 100)
 )
+
 optimizer = opt("mbo",
   loop_function = bayesopt_ego,
   surrogate = surrogate,
@@ -109,7 +109,7 @@ result = bb_optimize(
 )
 ```
 
-## Simple Tuning Example Using Defaults
+## Simple Tuning Example
 
 ```{r, message = FALSE}
 library(mlr3)
