--- a/README.Rmd
+++ b/README.Rmd
@@ -52,28 +52,23 @@ set.seed(1)
 obfun = ObjectiveRFun$new(
   fun = function(xs) list(y1 = xs$x ^ 2),
   domain = ps(x = p_dbl(lower = -5, upper = 5)),
-  codomain = ps(y1 = p_dbl(tags = "minimize"))
-)
-
-terminator = trm("evals", n_evals = 10)
+  codomain = ps(y1 = p_dbl(tags = "minimize")))
 
 instance = OptimInstanceSingleCrit$new(
   objective = obfun,
-  terminator = terminator
-)
+  terminator = trm("evals", n_evals = 10))
 
 surrogate = srlrn(lrn("regr.km", control = list(trace = FALSE)))
 acqfun = acqf("ei")
 acqopt = acqo(opt("random_search", batch_size = 100),
-  terminator = trm("evals", n_evals = 100)
-)
+  terminator = trm("evals", n_evals = 100))
 
 optimizer = opt("mbo",
   loop_function = bayesopt_ego,
   surrogate = surrogate,
   acq_function = acqfun,
-  acq_optimizer = acqopt
-)
+  acq_optimizer = acqopt)
+
 optimizer$optimize(instance)
 ```
 
@@ -90,23 +85,20 @@ fun = function(xs) list(y1 = xs$x ^ 2)
 surrogate = srlrn(lrn("regr.km", control = list(trace = FALSE)))
 acqfun = acqf("ei")
 acqopt = acqo(opt("random_search", batch_size = 100),
-  terminator = trm("evals", n_evals = 100)
-)
+  terminator = trm("evals", n_evals = 100))
 
 optimizer = opt("mbo",
   loop_function = bayesopt_ego,
   surrogate = surrogate,
   acq_function = acqfun,
-  acq_optimizer = acqopt
-)
+  acq_optimizer = acqopt)
 
 result = bb_optimize(
   fun,
   method = optimizer,
   lower = c(x = -5),
   upper = c(x = 5),
-  max_evals = 10
-)
+  max_evals = 10)
 ```
 
 ## Simple Tuning Example
@@ -120,7 +112,7 @@ set.seed(1)
 
 task = tsk("pima")
 
-learner = lrn("classif.rpart", cp = to_tune(lower = 1e-04, upper = 1e-1, logscale = TRUE))
+learner = lrn("classif.rpart", cp = to_tune(lower = 1e-04, upper = 1, logscale = TRUE))
 
 instance = tune(
   method = "mbo",
@@ -128,8 +120,7 @@ instance = tune(
   learner = learner,
   resampling = rsmp("holdout"),
   measure = msr("classif.ce"),
-  term_evals = 10
-)
+  term_evals = 10)
 
 instance$result
 ```
