fix: leanify, typo in vignette, bug in SurrogateLearnerCollection

--- a/vignettes/mlr3mbo.Rmd
+++ b/vignettes/mlr3mbo.Rmd
@@ -585,7 +585,7 @@ attr(bayesopt_custom, "id") = "bayesopt_custom"
 attr(bayesopt_custom, "label") = "Test"
 attr(bayesopt_custom, "instance") = "single-crit"
 attr(bayesopt_custom, "man") = ""  # no man page
-# if you want to add it to the dictionary: mlr_loop_functions$add("bayesopt_ego", bayesopt_ego)
+# if you want to add it to the dictionary: mlr_loop_functions$add("bayesopt_custom", bayesopt_custom)
 ```
 
 ```{r}
