docs: cleanup README, reference dev website

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ lgr::get_logger("bbotk")$set_threshold("warn")
 
 # mlr3mbo
 
-A new R6 and much more modular implementation for single- and multi-objective Bayesian Optimization.
+Package website: [release](https://mlr3mbo.mlr-org.com/) | [dev](https://mlr3mbo.mlr-org.com/dev/)
 
 <!-- badges: start -->
 [![r-cmd-check](https://github.com/mlr-org/mlr3mbo/actions/workflows/r-cmd-check.yml/badge.svg)](https://github.com/mlr-org/mlr3mbo/actions/workflows/r-cmd-check.yml)
@@ -18,6 +18,8 @@ A new R6 and much more modular implementation for single- and multi-objective Ba
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
+
+A new R6 and much more modular implementation for single- and multi-objective Bayesian Optimization.
 
 ## Get Started
 
