BREAKING CHANGE: renamed model field of Surrogate, SurrogateLearner and SurrogateLearnerCollection to learner

--- a/vignettes/mlr3mbo.Rmd
+++ b/vignettes/mlr3mbo.Rmd
@@ -246,10 +246,10 @@ or using syntactic sugar:
 surrogate = srlrn(lrn("regr.km"))
 ```
 
-The encapsulated learner can be accessed via the `$model` field:
+The encapsulated learner can be accessed via the `$learner` field:
 
 ```{r}
-surrogate$model
+surrogate$learner
 ```
 
 
