--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ A new R6 and much more modular implementation for single- and multi-objective Ba
 
 ## Get Started
 
-An overview and gentle introduction is given in [this vignette](https://mlr3mbo.mlr-org.com/articles/mlr3mbo.html).
+An overview and gentle introduction is given in [this vignette](https://mlr3mbo.mlr-org.com/dev/articles/mlr3mbo.html).
 
 ## Design
 
