docs: touch up vignette

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -8,19 +8,19 @@
 }
 
 @article{bischl_2021,
-  title   = {Hyperparameter Optimization: Foundations, Algorithms, Best Practices and Open Challenges},
-  url     = {https://arxiv.org/abs/2107.05847},
-  note    = {arXiv: 2107.05847},
-  journal = {arXiv:2107.05847 [cs, stat]},
-  author  = {Bischl, Bernd and Binder, Martin and Lang, Michel and Pielok, Tobias and Richter, Jakob and Coors, Stefan and Thomas, Janek and Ullmann, Theresa and Becker, Marc and Boulesteix, Anne-Laure and Deng, Difan and Lindauer, Marius},
-  year    = {2021}
+  title = {Hyperparameter Optimization: Foundations, Algorithms, Best Practices, and Open Challenges},
+  author = {Bischl, Bernd and Binder, Martin and Lang, Michel and Pielok, Tobias and Richter, Jakob and Coors, Stefan and Thomas, Janek and Ullmann, Theresa and Becker, Marc and Boulesteix, Anne-Laure and Deng, Difan and Lindauer, Marius},
+  journal = {Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+  pages = {e1484},
+  year = {2023},
+  publisher={Wiley Online Library}
 }
 
-@misc{mlr3book,
-  title  = {{mlr3book}},
-  author = {Becker, Marc and Binder, Martin and Bischl, Bernd and Foss, Natalie and Kotthoff, Lars and Lang, Michel and Pfisterer, Florian and Reich, Nicolas G. and Richter, Jakob and Schratz, Patrick and Sonabend, Raphael and Pulatov, Damir},
+@book{mlr3book,
+  title  = {{Flexible and Robust Machine Learning Using mlr3 in R}},
+  editor = {Bischl, Bernd and Sonabend, Raphael and Kotthoff, Lars and Lang, Michel},
   url    = {https://mlr3book.mlr-org.com},
-  year   = {2022}
+  year   = {2023}
 }
 
 @article{jones_1998,
