--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,6 @@ output: github_document
 ```{r, include = FALSE}
 lgr::get_logger("mlr3")$set_threshold("warn")
 lgr::get_logger("bbotk")$set_threshold("warn")
-
 ```
 
 # mlr3mbo
@@ -56,7 +55,7 @@ obfun = ObjectiveRFun$new(
   domain = ps(x = p_dbl(lower = -10, upper = 10)),
   codomain = ps(y1 = p_dbl(tags = "minimize")))
 
-instance = OptimInstanceSingleCrit$new(
+instance = oi(
   objective = obfun,
   terminator = trm("evals", n_evals = 10))
 
